# dir-tree-scanner

./: .coverage  .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  TODO.md  build.rs  justfile  nonexistent_nick  pyproject.toml  renovate.json
.devcontainer/: Dockerfile  README.md  devcontainer.json  post-create.sh
.github/workflows/: ci.yml
cmd/etp-init/: Cargo.toml
cmd/etp-query/: Cargo.toml
crates/etp-lib/: Cargo.toml  schema.sql
docs/: DESIGN_NOTES.md  etp-anime-parsing-rules.md
docs/adrs/: 2026-02-11-01-bincode-state-serialization.md  2026-02-14-01-python-38-vendored-tomli.md  2026-02-14-02-trycmd-snapshot-tests.md  2026-02-15-01-rkyv-state-serialization.md  2026-02-15-02-icu4x-collation.md  2026-02-15-03-brotli-state-compression.md  2026-02-15-04-python-314.md  2026-02-22-01-sqlx-sqlite-database.md  2026-02-22-02-single-threaded-tokio.md  2026-02-22-03-kdl-configuration.md  2026-02-22-04-lofty-taglib-metadata.md  2026-02-22-05-mlua-luajit-scripting.md  2026-02-22-06-blake3-filesystem-cas.md  2026-02-22-07-etcetera-xdg-paths.md  2026-02-22-08-cargo-workspace-architecture.md  2026-02-22-09-rust-plumbing-python-porcelain.md  2026-03-28-05-error-handling-strategy.md  (+7 more)
etp/: etp  etp-anime  etp-catalog  paths.py  pyproject.toml  test_anime.py  test_catalog.py  test_media_parser.py
etp-cas/: Cargo.toml
etp-find/: Cargo.toml
etp-lib/: Cargo.toml  schema.sql
scripts/: .gitignore  catalog-nas.py  catalog-nas.sh  catalog.toml  pyproject.toml  pyrightconfig.json  ruff.toml  test_catalog.py
src/: cli.rs  csv_writer.rs  lib.rs  main.rs  scanner.rs  state.rs
(+122 files in other folders)
