[package]
name = "caching-scanners"
version = "0.0.2"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
bincode = "1"
csv = "1"
glob = "0.3"
walkdir = "2"
icu_collator = "2.1.1"

[[bin]]
name = "fsscan"
path = "src/main.rs"

[[bin]]
name = "cached-tree"
path = "src/bin/cached_tree.rs"

[dev-dependencies]
tempfile = "3"
trycmd = "0.15"
